# italic-forge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: README.md
examples/bricolage/input/: make_obliques.py
src/forge/: __init__.py  cli.py  config.py  export.py  font.py  geometry.py  metrics.py  naming.py  optics.py
tests/: test_cli.py  test_font_info.py
